--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tamagui/feather-icons": "^1.0.1-beta.160",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "tamagui": "^1.0.1-beta.160",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
