--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.10.2",
+    "cors": "^2.8.5",
     "daisyui": "^2.25.0",
+    "express": "^4.18.1",
     "graphql": "^15.8.0",
+    "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
