--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "daisyui": "^2.31.0",
     "react": "^18.2.0",
